<resources>
    <string name="app_name">My Grocery Store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Reg_Name_hint">Name</string>
    <string name="REG_email_hint">Email</string>
    <string name="REG_password_hint">Password</string>
    <string name="reg_btn_signUp">Sign up</string>
    <string name="login_btn_signIp">Sign In</string>
    <string name="reg_already_line">Already have an Account?</string>
    <string name="login_already_line">Do not have an Account?</string>
    <string name="reg_textView_signIn">Sign In</string>
    <string name="login_textView_signIn">Sign Up</string>
    <string name="welcome_app_name">Welcome to Grocery Store App</string>
    <string name="welcome_explore">Explore Us</string>
    <string name="welcome_login">Login</string>
    <string name="welcome_registration">Registration</string>
    <string name="welcome_last_quote">We are happy to have you! Get Ready to Buy some fresh, freezy grocery and anything you want.</string>
    <string name="welcome_screen_image">welcome screen image</string>
    <string name="welcome_screen_login_image">welcome screen login image</string>
    <string name="welcome_screen_registration_image">welcome screen registration image</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_category">Category</string>
    <string name="menue_profile">Profile</string>
    <string name="menue_category">Category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_mycart">My Cart</string>
    <string name="nav_my_orders">My Orders</string>
    <string name="nav_new_product">New Products</string>
    <string name="nav_offers">Offers</string>
    <string name="search_your_item_here">Search Your Item here...</string>
    <string name="NotAVAILABLE_TEXT">Currently Product is not Available. Please try again later</string>
</resources>