<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.abhishek.mygrocerystore.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.abhishek.mygrocerystore.ui.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.abhishek.mygrocerystore.ui.category.categoryFragment"
        android:label="@string/nav_category"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_offers"
        android:name="com.example.abhishek.mygrocerystore.OffersFragment"
        android:label="@string/nav_offers"
        tools:layout="@layout/fragment_offers" />
    <fragment
        android:id="@+id/nav_new_product"
        android:name="com.example.abhishek.mygrocerystore.NewProductFragment"
        android:label="@string/nav_new_product"
        tools:layout="@layout/fragment_new_product" />
    <fragment
        android:id="@+id/nav_My_Orders"
        android:name="com.example.abhishek.mygrocerystore.myOrderFragment"
        android:label="@string/nav_my_orders"
        tools:layout="@layout/fragment_my_order" />
    <fragment
        android:id="@+id/nav_My_cart"
        android:name="com.example.abhishek.mygrocerystore.myCartFragment"
        android:label="@string/nav_mycart"
        tools:layout="@layout/fragment_my_cart" />
</navigation>