<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistrationActivity">

    <ImageView
        android:id="@+id/registration_bag_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/reg_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/reg_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/Reg_Name_hint"
        android:padding="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_bag_img"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/REG_email_hint"
        android:inputType="textEmailAddress"
        android:padding="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_name"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/reg_Phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/baseline_phone_24"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="Phone"
        android:inputType="phone"
        android:maxLength="10"
        android:padding="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_email"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/REG_password_hint"
        android:inputType="textPassword"
        android:padding="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_Phone"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:padding="14dp"
        android:text="@string/reg_btn_signUp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_password" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/reg_already_line"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signUp"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/reg_signIn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_textView_signIn"
        android:textColor="#264E26"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <ProgressBar
        android:id="@+id/reg_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="0.5"
        android:scaleY="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.19999999" />
</androidx.constraintlayout.widget.ConstraintLayout>